Changelog
=========

2.0.1 - unreleased
------------------


2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

- Clarify test dependencies and remove deprecated code, allowing us to remove
  the `zope.deferredimport` dependency.
  [hannosch]

2.0a1 - 2009-04-04
------------------

- Specify package dependencies.
  [hannosch]

1.0.3 - August 18, 2008
-----------------------

- Documentation updates.
  [hannosch]

1.0.2 - July 4, 2008
--------------------

- Restored Zope 2.9 compatibility. This closes
  http://dev.plone.org/plone/ticket/8177.
  [hannosch]

- Added conditional import logic to make the package work without Five.
  [hannosch]

1.0.1 - March 9, 2008
---------------------

- Deprecated the convenience import, as it confused the test coverage tool.
  [hannosch]

- Added tests for all aspects of the fieldsets.
  [hannosch]

- Added tests for the edit and input forms.
  [hannosch]

1.0 - August 13, 2007
---------------------

- No changes.
  [hannosch]

1.0rc3 - July 28, 2007
----------------------

- Corrected missing history.
  [hannosch]

1.0rc2 - July 27, 2007
----------------------

- Removed unnecessary adapters definition in FieldsetsInputForm.
  [davconvent]

- Added FieldsetsInputForm to the available fieldsets forms.
  [davconvent]

1.0rc1 - July 9, 2007
---------------------

- Removed useless setup.cfg.
  [hannosch]

1.0b3 - March 5, 2007
---------------------

- Added new optional description attribute to fieldsets.
  [hannosch]

1.0b2 - May 1, 2007
-------------------

- No changes.
  [hannosch]

1.0b1 - March 5, 2007
---------------------

- Fixed error reporting by referencing the widgets on the form itself on
  the individual fieldsets rather than copying them.
  [duncan, nouri]

- Initial implementation of the fieldsets class and the edit form support.
  [hannosch]

- Initial package structure.
  [zopeskel]